FIX: Board gap The board gap increased on resolution change, making the measurements invalid.

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -218,7 +218,7 @@ body {
 }
 
 .content {
-    --cell-size: calc((min(90vh, 100vw) - 10px*var(--grid-rows, int) - 20px)/var(--grid-rows, int));
+    --cell-size: calc((min(90vh, 100vw) - 20px - 10px*(var(--grid-rows) - 1))/var(--grid-rows));
     grid-area: content;
     align-self: center;
     display: grid;
@@ -232,10 +232,6 @@ body {
     row-gap: 10px;
     padding: 5vh 10px;
     background-color: white;
-}
-
-#options:has(> #hide[data-toggled="1"]) + .content {
-    --cell-size: calc((min(90vh, calc(100vw - 2rem + 40px)) - 10px*var(--grid-rows, int) - 20px)/var(--grid-rows, int));
 }
 
 .content img {
@@ -304,7 +300,7 @@ body {
 
 @media only screen and (min-width: 768px) {
     .content[data-mobile="0"]  {
-        --cell-size: calc((min(90vh, calc(100vw - 395px)) - 10px*var(--grid-rows, int) - 20px)/var(--grid-rows, int));
+        --cell-size: calc((min(90vh, 100vw) - 395px - 10px*(var(--grid-rows, int) - 1))/var(--grid-rows, int));
         display: grid; 
         width: 100%;
     }
